// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/filterComponent return filterComponent 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper override menuOpened"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
          <div
            class="Menu noselect bottom "
          >
            <div
              class="menu-contents"
            >
              <div
                class="menu-options"
              >
                <div>
                  <div
                    aria-label="Title"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Title
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Status"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Status
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 1"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 1
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 2"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 2
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 3"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 3
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
              <div
                class="menu-spacer hideOnWidescreen"
              />
              <div
                class="menu-options hideOnWidescreen"
              >
                <div
                  aria-label="Cancel"
                  class="MenuOption TextOption menu-option menu-cancel"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and add Filter 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper override menuOpened"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
          <div
            class="Menu noselect bottom "
          >
            <div
              class="menu-contents"
            >
              <div
                class="menu-options"
              >
                <div>
                  <div
                    aria-label="Title"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Title
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Status"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Status
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 1"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 1
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 2"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 2
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 3"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 3
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
              <div
                class="menu-spacer hideOnWidescreen"
              />
              <div
                class="menu-options hideOnWidescreen"
              >
                <div
                  aria-label="Cancel"
                  class="MenuOption TextOption menu-option menu-cancel"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and click is empty 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper override menuOpened"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
          <div
            class="Menu noselect bottom "
          >
            <div
              class="menu-contents"
            >
              <div
                class="menu-options"
              >
                <div>
                  <div
                    aria-label="includes"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        includes
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    aria-label="doesn't include"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        doesn't include
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    aria-label="is empty"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        is empty
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    aria-label="is not empty"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        is not empty
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div />
                <div />
                <div />
                <div />
                <div />
                <div />
              </div>
              <div
                class="menu-spacer hideOnWidescreen"
              />
              <div
                class="menu-options hideOnWidescreen"
              >
                <div
                  aria-label="Cancel"
                  class="MenuOption TextOption menu-option menu-cancel"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and filter by status 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper override menuOpened"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              (unknown)
            </span>
          </button>
          <div
            class="Menu noselect bottom "
          >
            <div
              class="menu-contents"
            >
              <div
                class="menu-options"
              >
                <div>
                  <div
                    aria-label="Title"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Title
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Status"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Status
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 1"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 1
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 2"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 2
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Property 3"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Property 3
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
              <div
                class="menu-spacer hideOnWidescreen"
              />
              <div
                class="menu-options hideOnWidescreen"
              >
                <div
                  aria-label="Cancel"
                  class="MenuOption TextOption menu-option menu-cancel"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              (unknown)
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;
